@@ -43,7 +43,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
-        <lombok.version>1.16.14</lombok.version>
+        <lombok.version>1.16.16</lombok.version>
         <junit.version>4.12</junit.version>
         <faker.version>0.13</faker.version>
         <assertj.version>3.6.2</assertj.version>
@@ -348,5 +348,17 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>java9</id>
+            <activation>
+                <jdk>9</jdk>
+            </activation>
+            <properties>
+                <argLine>--add-modules java.xml.bind</argLine>
+            </properties>
+        </profile>
+    </profiles>
 
 </project>
